training of xgboost

--- a/Credit Card Fraud.ipynb
+++ b/Credit Card Fraud.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,6 +11,7 @@
     "import gzip\n",
     "import requests\n",
     "\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
@@ -20,12 +21,14 @@
     "from sklearn.model_selection import train_test_split, StratifiedKFold\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.metrics import log_loss, precision_recall_curve, average_precision_score, roc_curve, auc"
+    "from sklearn.metrics import log_loss, precision_recall_curve, average_precision_score, roc_curve, auc\n",
+    "\n",
+    "import xgboost as xgb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +75,7 @@
        "Name: Class, dtype: int64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +95,7 @@
        "0"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +304,7 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +335,7 @@
        "Name: Class, Length: 284807, dtype: int64"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +645,7 @@
        "[8 rows x 30 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +693,7 @@
        "Name: Class, Length: 190820, dtype: int64"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -727,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +748,7 @@
        "'LogisticRegression'"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -756,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -816,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -922,7 +925,7 @@
        "[190820 rows x 2 columns]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -933,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -947,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -988,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1039,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1062,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1086,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1095,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1121,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1147,6 +1150,202 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Model #3: Gradient Boosting (XGBoost)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_xgboost(cross_validator):\n",
+    "    predictions = pd.DataFrame(data=[], index=y_train.index, columns=['prediction'])\n",
+    "\n",
+    "    xgb_parameters = {\n",
+    "        'nthread': 16,\n",
+    "        'learning_rate': 0.3,\n",
+    "        'gamma': 0,\n",
+    "        'max_depth': 6,\n",
+    "        'min_child_weight': 1,\n",
+    "        'max_delta_step': 0,\n",
+    "        'subsample': 1.0,\n",
+    "        'colsample_bytree': 1.0,\n",
+    "        'objective': 'binary:logistic',\n",
+    "        'num_class': 1,\n",
+    "        'eval_metric': 'logloss',\n",
+    "        'seed': 2018,\n",
+    "        'silent': 1,\n",
+    "    }\n",
+    "    \n",
+    "    for i, (training_index, validation_index) in enumerate(cross_validator.split(X_train, y_train)):\n",
+    "        X_training_fold = X_train.iloc[training_index, :]\n",
+    "        y_training_fold = y_train.iloc[training_index]\n",
+    "\n",
+    "        xgb_data_matrix_training = xgb.DMatrix(data=X_training_fold,\n",
+    "                                               label=y_training_fold)\n",
+    "        \n",
+    "        cross_validation_results = xgb.cv(params=xgb_parameters,\n",
+    "                                          dtrain=xgb_data_matrix_training,\n",
+    "                                          num_boost_round=2_000,\n",
+    "                                          nfold=5,\n",
+    "                                          early_stopping_rounds=200,\n",
+    "                                          verbose_eval=50)\n",
+    "        index_of_best_round = np.argmin(cross_validation_results.values)\n",
+    "        \n",
+    "        booster = xgb.train(params=xgb_parameters, dtrain=xgb_data_matrix_training, num_boost_round=index_of_best_round)\n",
+    "\n",
+    "        predictions_training = booster.predict(xgb_data_matrix_training)\n",
+    "        log_loss_training = log_loss(y_true=y_training_fold, y_pred=predictions_training)\n",
+    "        \n",
+    "        X_validation_fold = X_train.iloc[validation_index, :]\n",
+    "        y_validation_fold = y_train.iloc[validation_index,]\n",
+    "        xgb_data_matrix_validation = xgb.DMatrix(data=X_validation_fold)\n",
+    "        \n",
+    "        predictions_validation = booster.predict(xgb_data_matrix_validation)\n",
+    "        log_loss_validation = log_loss(y_true=y_validation_fold, y_pred=predictions_validation)\n",
+    "        \n",
+    "        predictions.loc[X_validation_fold.index, 'prediction'] = predictions_validation\n",
+    "        \n",
+    "        print(f'Cross Validation #Fold={i+1:1}/{cross_validator.n_splits:1} - Training Log Loss: {log_loss_training:.6f} - Validation Log Loss: {log_loss_validation:.6f}')\n",
+    "        \n",
+    "    return predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\fisch\\Miniconda3\\envs\\unsuper-02\\lib\\site-packages\\xgboost\\core.py:587: FutureWarning: Series.base is deprecated and will be removed in a future version\n",
+      "  if getattr(data, 'base', None) is not None and \\\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\ttrain-logloss:0.437929+5.24382e-05\ttest-logloss:0.438071+4.12534e-05\n",
+      "[50]\ttrain-logloss:0.0001446+5.4626e-06\ttest-logloss:0.0032646+0.000441828\n",
+      "[100]\ttrain-logloss:5.82e-05+7.48331e-07\ttest-logloss:0.0035686+0.00049924\n",
+      "[150]\ttrain-logloss:4.26e-05+4.89898e-07\ttest-logloss:0.003685+0.000546123\n",
+      "[200]\ttrain-logloss:3.64e-05+4.89898e-07\ttest-logloss:0.0037592+0.00055965\n",
+      "Cross Validation #Fold=1/5 - Training Log Loss: 0.031925 - Validation Log Loss: 0.032081\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\fisch\\Miniconda3\\envs\\unsuper-02\\lib\\site-packages\\xgboost\\core.py:587: FutureWarning: Series.base is deprecated and will be removed in a future version\n",
+      "  if getattr(data, 'base', None) is not None and \\\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\ttrain-logloss:0.437907+5.28674e-05\ttest-logloss:0.438001+5.7763e-05\n",
+      "[50]\ttrain-logloss:0.000132+4.42719e-06\ttest-logloss:0.003126+0.000311441\n",
+      "[100]\ttrain-logloss:5.6e-05+1.78885e-06\ttest-logloss:0.0034084+0.000386347\n",
+      "[150]\ttrain-logloss:4.1e-05+8.94427e-07\ttest-logloss:0.0035036+0.000418524\n",
+      "[200]\ttrain-logloss:3.52e-05+9.79796e-07\ttest-logloss:0.0035732+0.000425153\n",
+      "Cross Validation #Fold=2/5 - Training Log Loss: 0.031909 - Validation Log Loss: 0.032632\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\fisch\\Miniconda3\\envs\\unsuper-02\\lib\\site-packages\\xgboost\\core.py:587: FutureWarning: Series.base is deprecated and will be removed in a future version\n",
+      "  if getattr(data, 'base', None) is not None and \\\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\ttrain-logloss:0.437982+4.83802e-05\ttest-logloss:0.438069+7.20017e-05\n",
+      "[50]\ttrain-logloss:0.0001456+9.85089e-06\ttest-logloss:0.0033342+0.000837381\n",
+      "[100]\ttrain-logloss:5.96e-05+2.87054e-06\ttest-logloss:0.0036202+0.000979771\n",
+      "[150]\ttrain-logloss:4.4e-05+1.67332e-06\ttest-logloss:0.0037264+0.00102694\n",
+      "[200]\ttrain-logloss:3.7e-05+1.26491e-06\ttest-logloss:0.0037872+0.00105215\n",
+      "Cross Validation #Fold=3/5 - Training Log Loss: 0.107687 - Validation Log Loss: 0.107808\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\fisch\\Miniconda3\\envs\\unsuper-02\\lib\\site-packages\\xgboost\\core.py:587: FutureWarning: Series.base is deprecated and will be removed in a future version\n",
+      "  if getattr(data, 'base', None) is not None and \\\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\ttrain-logloss:0.438004+1.71231e-05\ttest-logloss:0.438058+4.12485e-05\n",
+      "[50]\ttrain-logloss:0.0001506+1.03073e-05\ttest-logloss:0.0034172+0.000528353\n",
+      "[100]\ttrain-logloss:5.96e-05+2.72764e-06\ttest-logloss:0.0037104+0.000620109\n",
+      "[150]\ttrain-logloss:4.4e-05+1.41421e-06\ttest-logloss:0.0038264+0.000654994\n",
+      "[200]\ttrain-logloss:3.68e-05+7.48331e-07\ttest-logloss:0.0038916+0.000658993\n",
+      "Cross Validation #Fold=4/5 - Training Log Loss: 0.437972 - Validation Log Loss: 0.438083\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\fisch\\Miniconda3\\envs\\unsuper-02\\lib\\site-packages\\xgboost\\core.py:587: FutureWarning: Series.base is deprecated and will be removed in a future version\n",
+      "  if getattr(data, 'base', None) is not None and \\\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\ttrain-logloss:0.437896+2.21323e-05\ttest-logloss:0.438055+9.10573e-05\n",
+      "[50]\ttrain-logloss:0.000125+8.6487e-06\ttest-logloss:0.0028162+0.000828017\n",
+      "[100]\ttrain-logloss:5.36e-05+2.24499e-06\ttest-logloss:0.0030314+0.000934211\n",
+      "[150]\ttrain-logloss:4.02e-05+7.48331e-07\ttest-logloss:0.0031026+0.000949287\n",
+      "[200]\ttrain-logloss:3.42e-05+7.48331e-07\ttest-logloss:0.00315+0.000982203\n",
+      "Cross Validation #Fold=5/5 - Training Log Loss: 0.437932 - Validation Log Loss: 0.438096\n"
+     ]
+    }
+   ],
+   "source": [
+    "predictions_xgboost = train_xgboost(stratified_kfold)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.argmin(cvr['test-logloss-mean'].values)"
+   ]
+  },
+  {
+   "cell_type": "raw",
    "metadata": {},
    "source": []
   }
